--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(ComputercraftComtroller VERSION 0.1)
 
-set(CMAKE_CXX_VERSION 20)
-set(CMAKE_CXX_VERSION_REQUIRED yes)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED yes)
 
 add_subdirectory(src)
